RESOLVED FIXED188768
CSE DataViewGet* DFG nodes
https://bugs.webkit.org/show_bug.cgi?id=188768
Summary CSE DataViewGet* DFG nodes
Saam Barati
Reported 2018-08-20 17:07:17 PDT
...
Attachments
patch (11.51 KB, patch)
2018-08-29 15:48 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2018-08-29 14:33:31 PDT
Compile times seem neutral: v8-spider-compile-time Collected 6 samples per benchmark/VM, with 6 VM invocations per benchmark. Emitted a call to gc() between sample measurements. Used 1 benchmark iteration per VM invocation for warm-up. Used the jsc-specific preciseTime() function to get microsecond-level timing. Reporting benchmark execution times with 95% confidence intervals in milliseconds. og change crypto 28.9927+-0.6474 28.4746+-0.3090 might be 1.0182x faster deltablue 62.3112+-0.6698 ? 63.2544+-1.8412 ? might be 1.0151x slower earley-boyer 33.6730+-0.5252 ? 33.7578+-0.4789 ? raytrace 50.1492+-1.7220 49.2558+-1.9707 might be 1.0181x faster regexp 8.5811+-0.1726 8.4797+-0.2319 might be 1.0120x faster richards 32.5610+-2.0026 31.5524+-0.4715 might be 1.0320x faster splay 13.0094+-0.4086 ? 13.2607+-0.5701 ? might be 1.0193x slower <geometric> 27.2178+-0.3925 27.0540+-0.3173 might be 1.0061x faster sunspider-compile-time Collected 10 samples per benchmark/VM, with 10 VM invocations per benchmark. Emitted a call to gc() between sample measurements. Used 1 benchmark iteration per VM invocation for warm-up. Used the jsc-specific preciseTime() function to get microsecond-level timing. Reporting benchmark execution times with 95% confidence intervals in milliseconds. og change 3d-cube 7.6605+-0.1267 7.6279+-0.0891 3d-morph 2.4644+-0.0740 ? 2.4839+-0.1584 ? 3d-raytrace 7.5117+-0.2640 ? 7.6141+-0.3377 ? might be 1.0136x slower access-binary-trees 5.3174+-0.0586 ? 5.3977+-0.2488 ? might be 1.0151x slower access-fannkuch 16.0672+-0.1699 15.8225+-0.2010 might be 1.0155x faster access-nbody 1.7783+-0.0793 1.7500+-0.0258 might be 1.0162x faster access-nsieve 1.8160+-0.1477 1.7267+-0.0526 might be 1.0517x faster bitops-3bit-bits-in-byte 0.3506+-0.0256 0.3361+-0.0100 might be 1.0431x faster bitops-bits-in-byte 2.8247+-0.0348 ? 2.8427+-0.0296 ? bitops-bitwise-and 0.6298+-0.0418 0.6281+-0.0367 bitops-nsieve-bits 3.8272+-0.0969 ? 3.8896+-0.1107 ? might be 1.0163x slower controlflow-recursive 6.7377+-0.0394 ? 6.8403+-0.3512 ? might be 1.0152x slower crypto-aes 2.9622+-0.0955 2.9349+-0.0486 crypto-md5 2.3069+-0.0898 ? 2.3695+-0.1914 ? might be 1.0271x slower crypto-sha1 2.5124+-0.0426 ? 2.5237+-0.0232 ? date-format-tofte 3.1164+-0.0566 3.1137+-0.0519 date-format-xparb 2.3894+-0.0843 ? 2.3991+-0.0418 ? math-cordic 2.3868+-0.0933 2.3757+-0.1293 math-partial-sums 0.6681+-0.0424 ? 0.6805+-0.0620 ? might be 1.0185x slower math-spectral-norm 0.6611+-0.0551 0.6414+-0.0139 might be 1.0307x faster regexp-dna 0.0000+-0.0000 0.0000+-0.0000 might be NaNx faster string-base64 0.9883+-0.0930 0.9212+-0.0382 might be 1.0728x faster string-fasta 6.3002+-0.0695 ? 6.3312+-0.1114 ? string-tagcloud 2.2417+-0.0299 ? 2.2778+-0.0528 ? might be 1.0161x slower string-unpack-code 3.7908+-0.3662 3.6120+-0.0588 might be 1.0495x faster string-validate-input 1.8718+-0.0306 ? 1.9398+-0.1335 ? might be 1.0364x slower <arithmetic> 3.4301+-0.0197 3.4261+-0.0285 might be 1.0011x faster
Saam Barati
Comment 2 2018-08-29 15:48:55 PDT
EWS Watchlist
Comment 3 2018-08-29 15:50:54 PDT
Attachment 348441 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGHeapLocation.h:86: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 4 2018-08-30 11:55:39 PDT
Comment on attachment 348441 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=348441&action=review r=me > Source/JavaScriptCore/dfg/DFGHeapLocation.h:-118 > - return m_kind + m_heap.hash() + m_index.hash() + m_kind; Nice!
WebKit Commit Bot
Comment 5 2018-08-30 12:28:06 PDT
Comment on attachment 348441 [details] patch Clearing flags on attachment: 348441 Committed r235515: <https://trac.webkit.org/changeset/235515>
WebKit Commit Bot
Comment 6 2018-08-30 12:28:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-08-31 08:56:44 PDT
Note You need to log in before you can comment on or make changes to this bug.